Details
-
Bug
-
Resolution: Done
-
P2: Important
-
4.5.0, 4.8.4, 5.0.0
-
7dd81686e8e9ee86624c5bcca10688cfb360dcb8
Description
It seems to be trying to render the KeypadModifier flag as if it was a Unicode character. Problem seems to be in QKeySequencePrivate::encodeString, which doesn't handle this flag.
Attachments
Issue Links
- relates to
-
QTBUG-69715 QKeySequence::toString() returns garbage strings for some simple QKeySequence
-
- Closed
-